@@ -1,5 +1,5 @@
 {
   "name": "pns",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Push Notification Service"
 }
