@@ -17,6 +17,9 @@ database = pns
 username = guest
 password = guest
 host = localhost
+; heartbeat_interval (in seconds)
+server_heartbeat_interval = 300
+worker_heartbeat_interval = 300
 
 [gcm]
 enabled = false
