@@ -1,2 +1,5 @@
+2015-01-09  Alper Ipek <3denizotesi@gmail.com>
+    * Make heartbeat interval configurable (1.1.0)
+
 2015-01-08  Alper Ipek <3denizotesi@gmail.com>
     * Initial release (1.0.0) of PNS (Push Notification Service)
